--- a/gui/newNote.ui
+++ b/gui/newNote.ui
@@ -113,7 +113,7 @@
     <string>Окончание</string>
    </property>
   </widget>
-  <widget class="QTimeEdit" name="timeEdit">
+  <widget class="QTimeEdit" name="startTimeSpinner">
    <property name="geometry">
     <rect>
      <x>10</x>
@@ -123,7 +123,7 @@
     </rect>
    </property>
   </widget>
-  <widget class="QTimeEdit" name="timeEdit_2">
+  <widget class="QTimeEdit" name="endTimeEdit">
    <property name="geometry">
     <rect>
      <x>10</x>
@@ -133,24 +133,63 @@
     </rect>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit">
+  <widget class="QLineEdit" name="nameTextPanel">
    <property name="geometry">
     <rect>
-     <x>260</x>
-     <y>30</y>
-     <width>113</width>
+     <x>332</x>
+     <y>10</y>
+     <width>131</width>
      <height>20</height>
     </rect>
    </property>
   </widget>
-  <widget class="QPlainTextEdit" name="plainTextEdit">
+  <widget class="QPlainTextEdit" name="descriptionTextPanel">
    <property name="geometry">
     <rect>
      <x>260</x>
-     <y>70</y>
+     <y>60</y>
      <width>211</width>
-     <height>241</height>
+     <height>221</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="addNoteButton">
+   <property name="geometry">
+    <rect>
+     <x>344</x>
+     <y>290</y>
+     <width>111</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Добавить заметку</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="titleLabel">
+   <property name="geometry">
+    <rect>
+     <x>270</x>
+     <y>13</y>
+     <width>47</width>
+     <height>13</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Название</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="descriptionLabel">
+   <property name="geometry">
+    <rect>
+     <x>260</x>
+     <y>40</y>
+     <width>61</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Описание:</string>
    </property>
   </widget>
  </widget>
