--- a/gui/gui.ui
+++ b/gui/gui.ui
@@ -99,7 +99,7 @@
       <x>0</x>
       <y>0</y>
       <width>641</width>
-      <height>481</height>
+      <height>471</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -108,16 +108,6 @@
     <property name="frameShadow">
      <enum>QFrame::Raised</enum>
     </property>
-    <widget class="QTableView" name="tableView">
-     <property name="geometry">
-      <rect>
-       <x>480</x>
-       <y>20</y>
-       <width>151</width>
-       <height>451</height>
-      </rect>
-     </property>
-    </widget>
     <widget class="QLabel" name="label">
      <property name="geometry">
       <rect>
@@ -134,8 +124,8 @@
     <widget class="QPushButton" name="pushButton">
      <property name="geometry">
       <rect>
-       <x>40</x>
-       <y>50</y>
+       <x>20</x>
+       <y>240</y>
        <width>75</width>
        <height>23</height>
       </rect>
@@ -147,8 +137,8 @@
     <widget class="QPushButton" name="openNewNoteButton">
      <property name="geometry">
       <rect>
-       <x>24</x>
-       <y>90</y>
+       <x>190</x>
+       <y>240</y>
        <width>101</width>
        <height>23</height>
       </rect>
@@ -160,11 +150,36 @@
     <widget class="QListWidget" name="listWidget">
      <property name="geometry">
       <rect>
-       <x>155</x>
+       <x>310</x>
        <y>20</y>
        <width>321</width>
        <height>451</height>
       </rect>
+     </property>
+    </widget>
+    <widget class="QCalendarWidget" name="calendarWidget">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>30</y>
+       <width>291</width>
+       <height>191</height>
+      </rect>
+     </property>
+     <property name="gridVisible">
+      <bool>true</bool>
+     </property>
+     <property name="horizontalHeaderFormat">
+      <enum>QCalendarWidget::ShortDayNames</enum>
+     </property>
+     <property name="verticalHeaderFormat">
+      <enum>QCalendarWidget::NoVerticalHeader</enum>
+     </property>
+     <property name="navigationBarVisible">
+      <bool>true</bool>
+     </property>
+     <property name="dateEditEnabled">
+      <bool>true</bool>
      </property>
     </widget>
    </widget>
