--- a/gui/newNote.ui
+++ b/gui/newNote.ui
@@ -1,14 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Form</class>
- <widget class="QWidget" name="Form">
+ <class>NewTaskForm</class>
+ <widget class="QWidget" name="NewTaskForm">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>480</width>
-    <height>320</height>
+    <width>315</width>
+    <height>278</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>315</width>
+    <height>278</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>315</width>
+    <height>278</height>
+   </size>
   </property>
   <property name="palette">
    <palette>
@@ -75,23 +87,13 @@
    </palette>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>Добавление задачи</string>
   </property>
-  <widget class="QCalendarWidget" name="calendarWidget">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>251</width>
-     <height>191</height>
-    </rect>
-   </property>
-  </widget>
   <widget class="QLabel" name="StartTimeLabel">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>210</y>
+     <x>230</x>
+     <y>10</y>
      <width>47</width>
      <height>13</height>
     </rect>
@@ -103,8 +105,8 @@
   <widget class="QLabel" name="EndTimeLabel">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>260</y>
+     <x>230</x>
+     <y>60</y>
      <width>61</width>
      <height>16</height>
     </rect>
@@ -116,9 +118,9 @@
   <widget class="QTimeEdit" name="startTimeSpinner">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>230</y>
-     <width>118</width>
+     <x>230</x>
+     <y>30</y>
+     <width>81</width>
      <height>22</height>
     </rect>
    </property>
@@ -126,9 +128,9 @@
   <widget class="QTimeEdit" name="endTimeEdit">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>280</y>
-     <width>118</width>
+     <x>230</x>
+     <y>80</y>
+     <width>81</width>
      <height>22</height>
     </rect>
    </property>
@@ -136,9 +138,9 @@
   <widget class="QLineEdit" name="nameTextPanel">
    <property name="geometry">
     <rect>
-     <x>332</x>
+     <x>10</x>
      <y>10</y>
-     <width>131</width>
+     <width>211</width>
      <height>20</height>
     </rect>
    </property>
@@ -146,50 +148,51 @@
   <widget class="QPlainTextEdit" name="descriptionTextPanel">
    <property name="geometry">
     <rect>
-     <x>260</x>
-     <y>60</y>
+     <x>10</x>
+     <y>40</y>
      <width>211</width>
-     <height>221</height>
+     <height>231</height>
     </rect>
    </property>
   </widget>
   <widget class="QPushButton" name="addNoteButton">
    <property name="geometry">
     <rect>
-     <x>344</x>
-     <y>290</y>
-     <width>111</width>
-     <height>23</height>
+     <x>230</x>
+     <y>230</y>
+     <width>81</width>
+     <height>41</height>
     </rect>
    </property>
    <property name="text">
-    <string>Добавить заметку</string>
+    <string>Добавить
+заметку</string>
    </property>
   </widget>
-  <widget class="QLabel" name="titleLabel">
+  <widget class="QCheckBox" name="checkBoxWithoutTime">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>13</y>
-     <width>47</width>
-     <height>13</height>
+     <x>230</x>
+     <y>120</y>
+     <width>81</width>
+     <height>17</height>
     </rect>
    </property>
    <property name="text">
-    <string>Название</string>
+    <string>Без времени</string>
    </property>
   </widget>
-  <widget class="QLabel" name="descriptionLabel">
+  <widget class="QCheckBox" name="checkBoxDone">
    <property name="geometry">
     <rect>
-     <x>260</x>
-     <y>40</y>
-     <width>61</width>
-     <height>16</height>
+     <x>230</x>
+     <y>150</y>
+     <width>81</width>
+     <height>17</height>
     </rect>
    </property>
    <property name="text">
-    <string>Описание:</string>
+    <string>Выполнено</string>
    </property>
   </widget>
  </widget>
