--- a/gui/gui.ui
+++ b/gui/gui.ui
@@ -137,9 +137,9 @@
     <widget class="QListWidget" name="listWidget">
      <property name="geometry">
       <rect>
-       <x>10</x>
+       <x>5</x>
        <y>240</y>
-       <width>271</width>
+       <width>312</width>
        <height>347</height>
       </rect>
      </property>
@@ -147,9 +147,9 @@
     <widget class="QCalendarWidget" name="calendarWidget">
      <property name="geometry">
       <rect>
-       <x>0</x>
+       <x>5</x>
        <y>10</y>
-       <width>311</width>
+       <width>312</width>
        <height>183</height>
       </rect>
      </property>
@@ -187,9 +187,9 @@
     <widget class="QTableWidget" name="tableWidget">
      <property name="geometry">
       <rect>
-       <x>315</x>
+       <x>335</x>
        <y>10</y>
-       <width>485</width>
+       <width>454</width>
        <height>578</height>
       </rect>
      </property>
@@ -199,7 +199,7 @@
       </font>
      </property>
      <property name="toolTip">
-      <string extracomment="привет"/>
+      <string/>
      </property>
      <property name="toolTipDuration">
       <number>0</number>
@@ -235,7 +235,7 @@
       <bool>false</bool>
      </attribute>
      <attribute name="horizontalHeaderDefaultSectionSize">
-      <number>61</number>
+      <number>57</number>
      </attribute>
      <attribute name="horizontalHeaderMinimumSectionSize">
       <number>39</number>
@@ -773,15 +773,6 @@
       </property>
       <property name="toolTip">
        <string extracomment="first"/>
-      </property>
-      <property name="background">
-       <brush brushstyle="Dense4Pattern">
-        <color alpha="255">
-         <red>19</red>
-         <green>255</green>
-         <blue>74</blue>
-        </color>
-       </brush>
       </property>
      </item>
     </widget>
