--- a/gui/newNote.ui
+++ b/gui/newNote.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>NewTaskForm</class>
  <widget class="QWidget" name="NewTaskForm">
+  <property name="windowModality">
+   <enum>Qt::WindowModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -103,6 +106,11 @@
      <height>13</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <pointsize>11</pointsize>
+    </font>
+   </property>
    <property name="text">
     <string>Начало</string>
    </property>
@@ -112,9 +120,14 @@
     <rect>
      <x>230</x>
      <y>60</y>
-     <width>61</width>
+     <width>71</width>
      <height>16</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>11</pointsize>
+    </font>
    </property>
    <property name="text">
     <string>Окончание</string>
@@ -129,6 +142,11 @@
      <height>22</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
   </widget>
   <widget class="QTimeEdit" name="end_spinner">
    <property name="geometry">
@@ -138,6 +156,11 @@
      <width>81</width>
      <height>22</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
    </property>
   </widget>
   <widget class="QLineEdit" name="title_line_edit">
@@ -149,6 +172,11 @@
      <height>20</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
   </widget>
   <widget class="QPlainTextEdit" name="description_text_panel">
    <property name="geometry">
@@ -158,6 +186,11 @@
      <width>211</width>
      <height>231</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
    </property>
   </widget>
   <widget class="QPushButton" name="add_note_button">
@@ -169,9 +202,32 @@
      <height>41</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
    <property name="text">
     <string>Добавить
 заметку</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="important_check_box">
+   <property name="geometry">
+    <rect>
+     <x>230</x>
+     <y>110</y>
+     <width>70</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Важно</string>
    </property>
   </widget>
  </widget>
