--- a/gui/note.ui
+++ b/gui/note.ui
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>NewTaskForm</class>
- <widget class="QWidget" name="NewTaskForm">
+ <class>NoteEditor</class>
+ <widget class="QWidget" name="NoteEditor">
+  <property name="windowModality">
+   <enum>Qt::WindowModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -92,16 +95,21 @@
    </font>
   </property>
   <property name="windowTitle">
-   <string>Добавление задачи</string>
+   <string>Редактирование задачи</string>
   </property>
   <widget class="QLabel" name="start_time_label">
    <property name="geometry">
     <rect>
      <x>230</x>
      <y>10</y>
-     <width>47</width>
-     <height>13</height>
+     <width>71</width>
+     <height>16</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>11</pointsize>
+    </font>
    </property>
    <property name="text">
     <string>Начало</string>
@@ -112,9 +120,14 @@
     <rect>
      <x>230</x>
      <y>60</y>
-     <width>61</width>
+     <width>71</width>
      <height>16</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>11</pointsize>
+    </font>
    </property>
    <property name="text">
     <string>Окончание</string>
@@ -129,6 +142,11 @@
      <height>22</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
   </widget>
   <widget class="QTimeEdit" name="end_spinner">
    <property name="geometry">
@@ -138,6 +156,12 @@
      <width>81</width>
      <height>22</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Times New Roman</family>
+     <pointsize>10</pointsize>
+    </font>
    </property>
   </widget>
   <widget class="QLineEdit" name="title_line_edit">
@@ -149,6 +173,26 @@
      <height>20</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+   <property name="accessibleDescription">
+    <string/>
+   </property>
+   <property name="inputMask">
+    <string extracomment="Название"/>
+   </property>
+   <property name="text">
+    <string extracomment="Название"/>
+   </property>
+   <property name="maxLength">
+    <number>500</number>
+   </property>
+   <property name="clearButtonEnabled">
+    <bool>true</bool>
+   </property>
   </widget>
   <widget class="QPlainTextEdit" name="description_text_panel">
    <property name="geometry">
@@ -159,8 +203,16 @@
      <height>231</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+   <property name="documentTitle">
+    <string extracomment="Описание "/>
+   </property>
   </widget>
-  <widget class="QPushButton" name="add_note_button">
+  <widget class="QPushButton" name="delete_note_button">
    <property name="geometry">
     <rect>
      <x>230</x>
@@ -169,9 +221,65 @@
      <height>41</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <family>Times New Roman</family>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
    <property name="text">
     <string>Удалить
 заметку</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="save_button">
+   <property name="geometry">
+    <rect>
+     <x>230</x>
+     <y>168</y>
+     <width>81</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Сохранить</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="change_date_button">
+   <property name="geometry">
+    <rect>
+     <x>230</x>
+     <y>190</y>
+     <width>81</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Изменить
+дату</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="important_check_box">
+   <property name="geometry">
+    <rect>
+     <x>230</x>
+     <y>110</y>
+     <width>70</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Важно</string>
    </property>
   </widget>
  </widget>
